--- a/README
+++ b/README
@@ -4,26 +4,10 @@ SHDL
 Scheme Hardware Description Language (SHDL).
 
 
-Example
--------
+Examples
+--------
 
-> (define a (make-wire))
-> (define b (make-wire))
-> (define c-in (make-wire))
-> (define s (make-wire))
-> (define c-out (make-wire))
-> (full-adder a b c-in s c-out)
-ok
-> (set-signal! a 1)
-done
-> (set-signal! b 1)
-done
-> (propagate)
-done
-> (get-signal s)
-0
-> (get-signal c-out)
-1
+See examples in examples/
 
 
 References
